--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "remix build",
     "d": "remix dev -c \"npm run dev:server\" --manual",
     "dev:server": "nodemon --exec \"node --experimental-specifier-resolution=node --loader @bleed-believer/path-alias ./server.ts\" --watch ./server.ts",
-    "start": "cross-env NODE_ENV=production node --experimental-specifier-resolution=node --loader @bleed-believer/path-alias ./server.ts",
+    "start": "cross-env NODE_ENV=production node -r dotenv/config --experimental-specifier-resolution=node --loader @bleed-believer/path-alias ./server.ts",
     "typecheck": "tsc",
     "gen_pass_hash": "node -r dotenv/config --loader @bleed-believer/path-alias ./cli/hash.ts"
   },
