--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@bleed-believer/path-alias": "^0.15.2",
+    "@heroicons/react": "^2.0.17",
     "@remix-run/dev": "^2.0.1",
     "@remix-run/eslint-config": "^2.0.1",
     "@remix-run/server-runtime": "^2.0.1",
@@ -39,6 +40,7 @@
     "@types/source-map-support": "^0.5.6",
     "bcryptjs": "^2.4.3",
     "chokidar": "^3.5.3",
+    "clsx": "^2.0.0",
     "dotenv": "^16.3.1",
     "eslint": "^8.38.0",
     "nodemon": "^2.0.22",
