--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev:server": "nodemon --exec \"node --experimental-specifier-resolution=node --loader @bleed-believer/path-alias ./server.ts\" --watch ./server.ts",
     "start": "cross-env NODE_ENV=production node -r dotenv/config --experimental-specifier-resolution=node --loader @bleed-believer/path-alias ./server.ts",
     "typecheck": "tsc",
-    "gen_pass_hash": "node -r dotenv/config --loader @bleed-believer/path-alias ./cli/hash.ts"
+    "hash": "node -r dotenv/config --loader @bleed-believer/path-alias ./cli/hash.ts"
   },
   "dependencies": {
     "@remix-run/css-bundle": "^2.0.1",
