--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "clsx": "^2.0.0",
     "dotenv": "^16.3.1",
     "eslint": "^8.38.0",
+    "framer-motion": "^10.16.4",
     "nodemon": "^2.0.22",
     "postgres": "^3.3.5",
     "tailwindcss": "^3.3.3",
